@@ -142,6 +142,7 @@ New Features
 32.SOLR-1092: Added a new command named 'import' which does not automatically clean the index. This is useful and
               more appropriate when one needs to import only some of the entities.
               (Noble Paul via shalin)
+33.SOLR-11153: 'deltaImportQuery' is honored on child entities as well (noble) 
 
 Optimizations
 ----------------------
